Fixed the desktop scrollbar issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,7 @@ body {
 .discussion-section-height{
   height: calc(100% - 136px);
 }
+
+.webkit-scrollbar::-webkit-scrollbar {
+  width: 0px;
+}
